<resources>
    <string name="app_name">PMDM_Practica1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_plus">+</string>
    <string name="str_menos">-</string>
    <string name="str_nobre">Nombre </string>
    <string name="str_primertelf">Primer telefono </string>
    <string name="str_ordenar_az">Ordenar A-Z </string>
    <string name="str_ordenar_za">Ordenar Z-A </string>
    <string name="str_borrar">Borrar</string>
    <string name="str_editar">Editar</string>
    <string name="str_insertar">Nuevo</string>
    <string name="str_alltelf">Todos los telefonos</string>
    <string name="title_activity_insert">Insert</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_telefono">Telefono</string>
    <string name="str_agregar">Agregar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_segundotelf">Segundo telefono</string>
    <string name="str_tercerotelf">Tercer Telefono</string>

</resources>
