<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/iv_icono"

        android:src="@drawable/imagen"
        android:padding="3dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_nobre"
            android:id="@+id/tv1"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_primertelf"
            android:id="@+id/tv2"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_alltelf"
            android:id="@+id/tv3"
            android:onClick="expandir"
            android:visibility="gone" />

    </LinearLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/bt_plus"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/boton_redondo_plus"
        android:src="@drawable/plus"
        android:onClick="expander" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/bt_menos"
        android:src="@drawable/menos"
        android:background="@drawable/boton_redondo_menos"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone" />

</LinearLayout>